Fixes and Updates:
	- Added waypoints for Chapter 6 of the 9.2 campaign.
	- Fixed an issue with random quest reward selection.
	- Fixed an issue with the Covenant, BFA, and Shadowlands dropdowns not preserving their icons after the settings menu is closed.